// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveText general functionality should match snapshot 1`] = `
<Text
  onPress={[MockFunction]}
  style={
    [
      {
        "fontSize": 14,
        "fontWeight": "regular",
      },
      {
        "color": "rgba(255, 255, 255, 0.66)",
        "marginBottom": undefined,
      },
    ]
  }
>
  prefix-test 
  <Text
    style={
      [
        {
          "textDecorationLine": "underline",
        },
        {
          "color": "#FFF",
        },
      ]
    }
  >
    text-test
  </Text>
</Text>
`;

exports[`InteractiveText when color prop is given should match snapshot 1`] = `
<Text
  onPress={
    [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "fontWeight": "regular",
      },
      {
        "color": "rgba(255, 255, 255, 0.66)",
        "marginBottom": undefined,
      },
    ]
  }
>
  prefix-test 
  <Text
    style={
      [
        {
          "textDecorationLine": "underline",
        },
        {
          "color": "#000",
        },
      ]
    }
  >
    text-test
  </Text>
</Text>
`;
